<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.tumblr.httpappsbybridget.mad_a1.AddNewAssignment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/NewAssignmentLabel"
        android:id="@+id/textViewNewAssignmentLabel"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textStyle="bold" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SaveButtonLabel"
        android:id="@+id/buttonSave"
        android:layout_column="0"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/textViewNewAssignmentLabel"
        android:layout_alignStart="@+id/textViewNewAssignmentLabel" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView2" >

    </ScrollView>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:measureWithLargestChild="false"
        android:padding="5dp"
        android:layout_below="@+id/textViewNewAssignmentLabel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/tableLayout"
        android:layout_above="@+id/buttonSave">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/scrollView"
                android:layout_column="0" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/TitleLabel"
                android:id="@+id/textViewTitleLabel"
                style="@style/TextLabels"
                android:paddingRight="5dp"
                android:paddingBottom="5dp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/editTextTitle"
                style="@style/TextFields"
                android:editable="true"
                android:text="@string/TitleEditText"
                android:inputType="text"
                android:layout_column="0" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/DateLabel"
                android:id="@+id/textViewDateLabel"
                android:layout_column="0"
                style="@style/TextLabels" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/editTextDueDate"
                android:layout_column="0"
                android:inputType="datetime" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/PriorityLabel"
                android:id="@+id/textViewPriorityLabel"
                android:layout_column="0"
                style="@style/TextLabels" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/spinnerPriority"
                android:layout_column="0"
                android:spinnerMode="dropdown"
                style="@style/TextFields"
                android:clickable="true"
                android:entries="@array/PriorityLevels" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/DetailsLabel"
                android:id="@+id/textViewDetailsLabel"
                android:layout_column="0"
                style="@style/TextLabels" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:ems="10"
                android:id="@+id/editTextDetails"
                android:layout_column="0"
                android:text="@string/DetailsEditText" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/TasksLabel"
                android:id="@+id/textViewTasksLabel"
                android:layout_column="0"
                style="@style/TextLabels" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:ems="10"
                android:id="@+id/editTextTasks"
                android:layout_column="0"
                android:text="@string/TasksEditText" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </TableRow>

    </TableLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/CancelButtonLabel"
        android:id="@+id/buttonCancel"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/textViewNewAssignmentLabel"
        android:layout_alignEnd="@+id/textViewNewAssignmentLabel" />

</RelativeLayout>
